# url-shortening

./: .gitignore  docker-compose.yml  test
program/: Cargo.toml
program/src/: database.rs  key_gen.rs  lib.rs  main.rs  schema.rs
scripts/: cqlsh.sh  data.cql  loadcqlsh.sh
