[package]
name = "url-shortening"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "0.4.0"
anyhow = "1.0.53"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
redis = "0.21.5"
